A fix (bug #9309: Wrong order in INFORMATION_SCHEMA)